<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.activity.ClientePerfilActivity">

    <include layout="@layout/toolbar"/>

    <!--Nome-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activityClientePerfilInputLayoutNome"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_components_pattern"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="UnknownIdInLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activityClientePerfilEditTextNome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activityClientePerfilInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_components_pattern"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityClientePerfilInputLayoutNome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activityClientePerfilEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Senha-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activityClientePerfilInputLayoutSenha"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_components_pattern"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityClientePerfilInputLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activityClientePerfilEditTextSenha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Telefone-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activityClientePerfilInputLayoutTelefone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_components_pattern"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/telefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityClientePerfilInputLayoutSenha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activityClientePerfilEditTextTelefone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activityClientePerfilButtonAtualizar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_components_pattern"
        android:layout_marginStart="8dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:text="@string/atualizar"
        android:textColor="@color/md_white_1000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityClientePerfilInputLayoutTelefone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activityClientePerfilButtonDeletar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_components_pattern"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="@string/deletar"
        android:textColor="@color/md_white_1000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityClientePerfilButtonAtualizar"
        app:layout_constraintVertical_bias="0.165" />

</androidx.constraintlayout.widget.ConstraintLayout>